--- a/seedChecker2/style.css
+++ b/seedChecker2/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Reddit+Mono:wght@200..900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Reddit+Mono:wght@200..900&display=swap'); */
 
 @media (prefers-color-scheme: light) {
   :root {
@@ -111,4 +111,8 @@ hr {
 .stretch-end {
   flex: 1;
   margin-left: 8px;
+}
+
+.config-menu {
+  display: none;
 }
