--- a/seedChecker2/style.css
+++ b/seedChecker2/style.css
@@ -1,4 +1,4 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Reddit+Mono:wght@200..900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Reddit+Mono:wght@200..900&display=swap');
 
 @media (prefers-color-scheme: light) {
   :root {
@@ -8,6 +8,7 @@
     --button-hover-color: #a0a0c0;
     --output-color: #9090a0;
     --text-color: #000000;
+    --link-color: #444499;
     --border-color: #00000040;
     
     --text-weight: 500;
@@ -22,6 +23,7 @@
     --button-hover-color: #404050;
     --output-color: #101018;
     --text-color: #ffffff;
+    --link-color: #ccccff;
     --border-color: #ffffff40;
     
     --text-weight: 400;
@@ -57,6 +59,10 @@ p, label {
   margin: 0;
 }
 
+a {
+  color: var(--link-color);
+}
+
 input, button, select {
   color: var(--text-color);
   font-family: inherit;
@@ -83,6 +89,7 @@ button:hover {
   padding: 8px;
   
   word-break: break-word;
+  white-space: pre-wrap;
 }
 
 hr {
